Fix content reposition when scrollbar appears by setting overflow-y to scroll on html tag

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap");
 @import url("https://use.typekit.net/zvh6tds.css");
 
+html {
+  overflow-y: scroll;
+}
+
 p,
 a,
 span,
